--- a/public/index.css
+++ b/public/index.css
@@ -3,17 +3,17 @@ body {font-family: Verdana, sans-serif;}
 
 /* Month header */
 .month {
-  padding: 70px 25px;
+  padding: 40px 0px;
   width: 100%;
-  background: #1abc9c;
+  background: #003366;
   text-align: center;
 }
 
 
 /* Month list */
 .month ul {
-  margin: 0;
-  padding: 0;
+  margin: 0px;
+  padding: 10px;
 }
 
 .month ul li {
@@ -26,13 +26,15 @@ body {font-family: Verdana, sans-serif;}
 /* Previous button inside month header */
 .month .prev {
   float: left;
-  padding-top: 10px;
+  font-size: 75px;
+  padding-left: 5px;
 }
 
 /* Next button */
 .month .next {
   float: right;
-  padding-top: 10px;
+  font-size: 75px;
+  padding-right: 5px;
 }
 
 /* Weekdays (Mon-Sun) */
@@ -45,7 +47,7 @@ body {font-family: Verdana, sans-serif;}
 .weekdays li {
   display: inline-block;
   width: 13.6%;
-  color: #666;
+  color: solid black;
   text-align: center;
 }
 
@@ -54,6 +56,7 @@ body {font-family: Verdana, sans-serif;}
   padding: 10px 0;
   background: #eee;
   margin: 0;
+  display: hidden;
 }
 
 .days li {
@@ -61,14 +64,14 @@ body {font-family: Verdana, sans-serif;}
   display: inline-block;
   width: 13.6%;
   text-align: center;
-  margin-bottom: 5px;
-  font-size:12px;
-  color: #777;
+  height: 110px;
+  border: 1px solid black;
+  font-size:20px;
+  color: black;
 }
 
 /* Highlight the "current" day */
-.days li .active {
-  padding: 5px;
-  background: #1abc9c;
+.days li .current {
+  background: #003366;
   color: white !important
 }
