--- a/public/index.css
+++ b/public/index.css
@@ -229,6 +229,15 @@ body {font-family: Verdana, sans-serif;}
   color: #757575;
 }
 
+.form-container .dato {
+  width: 25%;
+  padding: 15px;
+  margin: 5px 0 22px 0;
+  border: none;
+  background: #f1f1f1;
+  color: #757575;
+}
+
 /* Set a style for the submit/login button */
 .form-container .btn {
   background-color: #04AA6D;
