--- a/public/index.css
+++ b/public/index.css
@@ -117,6 +117,7 @@ body {font-family: Verdana, sans-serif;}
   visibility: hidden;
 }
 
+/* Grupper */
 .days div .Alugod {
   margin: 0.5%;
   display: block;
